some frontend and backend services created